# pubgate

./: .pre-commit-config.yaml  LICENSE  README.md  SPEC.md  pyproject.toml
.github/workflows/: pre-commit.yml  publish-to-pypi.yml  pytest.yml
pubgate/: __init__.py  __main__.py  _log.py  absorb.py  config.py  core.py  git.py  inbound.py  models.py  pr.py  publish.py  stage_snapshot.py  state.py  status.py
tests/: conftest.py  test_absorb.py  test_cli.py  test_filtering.py  test_lfs.py  test_logging.py  test_pr.py  test_publish.py  test_recovery.py  test_stage.py  test_startup.py  test_status.py
